# MyGameList

./: .env.template  .gitignore  _main_.py  pyproject.toml
src/crud_app/: __main__.py  app.py  auth.py
src/crud_app/db/: __init__.py  mongo.py
src/crud_app/static/: game_list.css  index.css
src/crud_app/templates/: login.html  profile.html  signup.html
